--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
 url: http://kkulma.github.io
-baseurl: ""
+baseurl: localhost.4000
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
