--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ url-pretty: ""  # eg. "deanattali.com/beautiful-jekyll"
 #disqus: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: UA-28847998-1
 
 # Google Tag Manager ID
 #gtm: ""
