--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ url-pretty: ""  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: kkulma
+disqus: https-kkulma-github-io
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: UA-92539076-1
